feat: add character's info in sidebar

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -80,3 +80,11 @@ main {
         opacity: 1
     }
 }
+
+.img_placeholder {
+    object-fit: contain !important;
+}
+
+.img_placeholder_fill {
+    object-fit: fill !important;
+}
