--- a/src/components/charList/charList.scss
+++ b/src/components/charList/charList.scss
@@ -41,3 +41,22 @@
         color: #fff;
     }
 }
+
+.item-enter {
+    opacity: 0;
+    transform: scale(.9);
+}
+.item-enter-active {
+    opacity: 1;
+    transform: scale(1);
+    transition: all 300ms ease-in-out;
+}
+.item-exit {
+    opacity: 1;
+    transform: scale(1);
+}
+.item-exit-active {
+    opacity: 0;
+    transform: scale(.9);
+    transition: all 300ms ease-in-out;
+}
