--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -88,3 +88,22 @@ main {
 .img_placeholder_fill {
     object-fit: fill !important;
 }
+
+.item-enter {
+    opacity: 0;
+    transform: scale(.9);
+}
+.item-enter-active {
+    opacity: 1;
+    transform: scale(1);
+    transition: all 300ms ease-in-out;
+}
+.item-exit {
+    opacity: 1;
+    transform: scale(1);
+}
+.item-exit-active {
+    opacity: 0;
+    transform: scale(.9);
+    transition: all 300ms ease-in-out;
+}
